MAINT-2929 Add ModuleMetadataFilterer for simpler filtering